--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
+{% load static %}
 <a href="/">
-  <h1>LOGO</h1>
+  <img src="{% static 'images/MorCafeMain.jpg' %}" width="400" height="300">
 </a>
-
 <hr>
 
